--- a/src/ui/MainMenu.form
+++ b/src/ui/MainMenu.form
@@ -4,6 +4,7 @@
   <NonVisualComponents>
     <Container class="javax.swing.JDialog" name="dlgHowToPlay">
       <Properties>
+        <Property name="title" type="java.lang.String" value="How To Play"/>
         <Property name="modal" type="boolean" value="true"/>
         <Property name="undecorated" type="boolean" value="true"/>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
@@ -123,6 +124,7 @@
     </Container>
     <Container class="javax.swing.JDialog" name="dlgAboutUs">
       <Properties>
+        <Property name="title" type="java.lang.String" value="About Us"/>
         <Property name="modal" type="boolean" value="true"/>
         <Property name="undecorated" type="boolean" value="true"/>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
@@ -314,16 +316,16 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="144" max="-2" attributes="0"/>
+          <Group type="102" attributes="0">
+              <EmptySpace min="-2" pref="113" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="2" attributes="0">
-                  <Component id="jLabel1" alignment="2" min="-2" max="-2" attributes="0"/>
                   <Component id="btnStartGame" alignment="2" min="-2" pref="329" max="-2" attributes="0"/>
                   <Component id="btnHowToPlay" alignment="2" min="-2" pref="329" max="-2" attributes="0"/>
                   <Component id="btnAboutUs" alignment="2" min="-2" pref="329" max="-2" attributes="0"/>
                   <Component id="btnQuit" alignment="2" min="-2" pref="329" max="-2" attributes="0"/>
+                  <Component id="jLabel1" alignment="2" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="144" max="32767" attributes="0"/>
+              <EmptySpace pref="114" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -351,7 +353,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Dialog" size="48" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="HANGMAN 2.0"/>
+        <Property name="text" type="java.lang.String" value="HANGMAN PLUS"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="btnStartGame">
